--- a/environment.yml
+++ b/environment.yml
@@ -3,47 +3,75 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - blas=1.0
-  - ca-certificates=2020.1.1
-  - certifi=2019.11.28
-  - cycler=0.10.0
-  - cython=0.29.15
-  - freetype=2.9.1
-  - intel-openmp=2019.4
-  - kiwisolver=1.1.0
-  - libedit=3.1.20181209
-  - libffi=3.2.1
-  - libpng=1.6.37
-  - matplotlib=3.1.3
-  - matplotlib-base=3.1.3
-  - mkl=2019.4
-  - mkl-service=2.3.0
-  - mkl_fft=1.0.15
-  - mkl_random=1.1.0
-  - ncurses=6.2
-  - numpy=1.18.1
-  - numpy-base=1.18.1
-  - openssl=1.1.1
-  - pandas=1.0.3
-  - patsy=0.5.1
-  - pip=20.0.2
-  - pyparsing=2.4.6
-  - pystan=2.19.0.0
-  - python=3.6.10
-  - python-dateutil=2.8.1
-  - pytz=2019.3
-  - readline=8.0
-  - scipy=1.4.1
-  - setuptools=46.1.1
-  - six=1.14.0
-  - sqlite=3.31.1
-  - statsmodels=0.11.0
-  - tk=8.6.8
-  - tornado=6.0.4
-  - wheel=0.34.2
-  - xz=5.2.4
-  - zlib=1.2.11
+  - binutils_impl_linux-64=2.31.1=h6176602_1
+  - binutils_linux-64=2.31.1=h6176602_9
+  - blas=1.0=mkl
+  - ca-certificates=2020.1.1=0
+  - certifi=2019.11.28=py36_1
+  - cycler=0.10.0=py36_0
+  - cython=0.29.15=py36he6710b0_0
+  - dbus=1.13.12=h746ee38_0
+  - expat=2.2.6=he6710b0_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - gcc_impl_linux-64=7.3.0=habb00fd_1
+  - gcc_linux-64=7.3.0=h553295d_9
+  - glib=2.56.2=hd408876_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - gxx_impl_linux-64=7.3.0=hdf63c60_1
+  - gxx_linux-64=7.3.0=h553295d_9
+  - icu=58.2=h211956c_0
+  - intel-openmp=2019.4=243
+  - jpeg=9b=habf39ab_1
+  - kiwisolver=1.1.0=py36he6710b0_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=h4deb6c0_3
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.9=hea5a465_1
+  - matplotlib=3.1.3=py36_0
+  - matplotlib-base=3.1.3=py36hef1b27d_0
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py36he904b0f_0
+  - mkl_fft=1.0.15=py36ha843d7b_0
+  - mkl_random=1.1.0=py36hd6b4f25_0
+  - ncurses=6.2=he6710b0_0
+  - numpy=1.18.1=py36h4f9e942_0
+  - numpy-base=1.18.1=py36hde5b4d6_1
+  - openssl=1.1.1=h7b6447c_0
+  - pandas=1.0.3=py36h0573a6f_0
+  - patsy=0.5.1=py36_0
+  - pcre=8.43=he6710b0_0
+  - pip=20.0.2=py36_1
+  - pyparsing=2.4.6=py_0
+  - pyqt=5.9.2=py36h22d08a2_1
+  - pystan=2.19.0.0=py36h962f231_0
+  - python=3.6.10=hcf32534_1
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
+  - qt=5.9.7=h5867ecd_1
+  - readline=8.0=h7b6447c_0
+  - scipy=1.4.1=py36h0b6359f_0
+  - setuptools=46.1.1=py36_0
+  - sip=4.19.13=py36he6710b0_0
+  - six=1.14.0=py36_0
+  - sqlite=3.31.1=h7b6447c_0
+  - statsmodels=0.11.0=py36h7b6447c_0
+  - tk=8.6.8=hbc83047_0
+  - tornado=6.0.4=py36h7b6447c_1
+  - wheel=0.34.2=py36_0
+  - xz=5.2.4=h14c3975_4
+  - zlib=1.2.11=h7b6447c_3
   - pip:
     - colour==0.1.5
+    - mpi4py==3.0.3
     - seaborn==0.10.0
     - tabulate==0.8.7
+prefix: /users/PAS0093/osu10689/anaconda3/envs/dynamic_survival_analysis
+
