--- a/environment.yml
+++ b/environment.yml
@@ -3,75 +3,60 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - binutils_impl_linux-64=2.31.1=h6176602_1
-  - binutils_linux-64=2.31.1=h6176602_9
   - blas=1.0=mkl
   - ca-certificates=2020.1.1=0
+  - cctools=895=1
   - certifi=2019.11.28=py36_1
-  - cycler=0.10.0=py36_0
-  - cython=0.29.15=py36he6710b0_0
-  - dbus=1.13.12=h746ee38_0
-  - expat=2.2.6=he6710b0_0
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - gcc_impl_linux-64=7.3.0=habb00fd_1
-  - gcc_linux-64=7.3.0=h553295d_9
-  - glib=2.56.2=hd408876_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - gxx_impl_linux-64=7.3.0=hdf63c60_1
-  - gxx_linux-64=7.3.0=h553295d_9
-  - icu=58.2=h211956c_0
-  - intel-openmp=2019.4=243
-  - jpeg=9b=habf39ab_1
-  - kiwisolver=1.1.0=py36he6710b0_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=h4deb6c0_3
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
+  - clang=4.0.1=1
+  - clang_osx-64=4.0.1=h1ce6c1d_18
+  - clangxx=4.0.1=1
+  - clangxx_osx-64=4.0.1=h22b1bf0_18
+  - compiler-rt=4.0.1=hcfea43d_1
+  - cycler=0.10.0=py36hfc81398_0
+  - cython=0.29.15=py36h0a44026_0
+  - freetype=2.9.1=hb4e5f40_0
+  - intel-openmp=2019.4=233
+  - kiwisolver=1.1.0=py36h0a44026_0
+  - ld64=274.2=1
+  - libcxx=4.0.1=hcfea43d_1
+  - libcxxabi=4.0.1=hcfea43d_1
+  - libedit=3.1.20181209=hb402a30_0
+  - libffi=3.2.1=h475c297_4
+  - libgfortran=3.0.1=h93005f0_2
+  - libpng=1.6.37=ha441bb4_0
+  - llvm=4.0.1=1
+  - llvm-lto-tapi=4.0.1=1
   - matplotlib=3.1.3=py36_0
-  - matplotlib-base=3.1.3=py36hef1b27d_0
-  - mkl=2019.4=243
-  - mkl-service=2.3.0=py36he904b0f_0
-  - mkl_fft=1.0.15=py36ha843d7b_0
-  - mkl_random=1.1.0=py36hd6b4f25_0
-  - ncurses=6.2=he6710b0_0
-  - numpy=1.18.1=py36h4f9e942_0
-  - numpy-base=1.18.1=py36hde5b4d6_1
-  - openssl=1.1.1=h7b6447c_0
-  - pandas=1.0.3=py36h0573a6f_0
+  - matplotlib-base=3.1.3=py36h9aa3819_0
+  - mkl=2019.4=233
+  - mkl-service=2.3.0=py36hfbe908c_0
+  - mkl_fft=1.0.15=py36h5e564d8_0
+  - mkl_random=1.1.0=py36ha771720_0
+  - ncurses=6.2=h0a44026_0
+  - numpy=1.18.1=py36h7241aed_0
+  - numpy-base=1.18.1=py36h6575580_1
+  - pandas=1.0.3=py36h6c726b0_0
   - patsy=0.5.1=py36_0
-  - pcre=8.43=he6710b0_0
   - pip=20.0.2=py36_1
   - pyparsing=2.4.6=py_0
-  - pyqt=5.9.2=py36h22d08a2_1
-  - pystan=2.19.0.0=py36h962f231_0
-  - python=3.6.10=hcf32534_1
+  - pystan=2.19.0.0=py36h6440ff4_0
+  - python=3.6.10=hc70fcce_1
   - python-dateutil=2.8.1=py_0
   - pytz=2019.3=py_0
-  - qt=5.9.7=h5867ecd_1
-  - readline=8.0=h7b6447c_0
-  - scipy=1.4.1=py36h0b6359f_0
+  - readline=8.0=h1de35cc_0
+  - scipy=1.4.1=py36h9fa6033_0
   - setuptools=46.1.1=py36_0
-  - sip=4.19.13=py36he6710b0_0
   - six=1.14.0=py36_0
-  - sqlite=3.31.1=h7b6447c_0
-  - statsmodels=0.11.0=py36h7b6447c_0
-  - tk=8.6.8=hbc83047_0
-  - tornado=6.0.4=py36h7b6447c_1
+  - sqlite=3.31.1=ha441bb4_0
+  - statsmodels=0.11.0=py36h1de35cc_0
+  - tk=8.6.8=ha441bb4_0
+  - tornado=6.0.4=py36h1de35cc_1
   - wheel=0.34.2=py36_0
-  - xz=5.2.4=h14c3975_4
-  - zlib=1.2.11=h7b6447c_3
+  - xz=5.2.4=h1de35cc_4
+  - zlib=1.2.11=h1de35cc_3
   - pip:
     - colour==0.1.5
-    - mpi4py==3.0.3
     - seaborn==0.10.0
     - tabulate==0.8.7
-prefix: /users/PAS0093/osu10689/anaconda3/envs/dynamic_survival_analysis
+prefix: /Users/khudabukhsh.2/anaconda3/envs/dynamic_survival_analysis
 
